change adkit to openadkit
Signed-off-by: Oguz Ozturk <oguzkaganozt@gmail.com>

--- a/.github/workflows/docker-build-main.yaml
+++ b/.github/workflows/docker-build-main.yaml
@@ -9,7 +9,7 @@ name: docker-build-main
 on:
   push:
     tags:
-      - adkit-v*.*.*
+      - openadkit-v*.*.*
     branches:
       - main
   schedule:
