--- a/.github/workflows/docker-build-main-self-hosted.yaml
+++ b/.github/workflows/docker-build-main-self-hosted.yaml
@@ -9,7 +9,7 @@ name: docker-build-main-self-hosted
 on:
   push:
     tags:
-      - adkit-v*.*.*
+      - openadkit-v*.*.*
     branches:
       - main
   schedule:
