--- a/.github/workflows/docker-build-main-self-hosted.yaml
+++ b/.github/workflows/docker-build-main-self-hosted.yaml
@@ -13,7 +13,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: 0 0 1,15 * *
+    - cron: 0 12 * * *
   workflow_dispatch:
     inputs:
       artifacts-destination:
